--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,59 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# Dependencies
-node_modules
-.pnp
-.pnp.js
-
-# Local env files
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Testing
-coverage
-
-# Turbo
-.turbo
-
-# Vercel
-.vercel
-
-# Build Outputs
-.next/
-out/
-build
-dist
-
-
-# Debug
+# Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
-# Misc
+# Node modules
+node_modules/
+ignores/
+.pnp/
+.pnp.* 
+
+# Build output
+dist/
+build/
+.next/
+out/
+.nest/
+
+# pnpm-specific
+.pnpm-debug.log*
+pnpm-lock.yaml
+
+# Turborepo-specific
+/.turbo
+
+# Environment variables
+.env
+.env.* 
+
+# TypeScript
+*.tsbuildinfo
+
+# Coverage directories
+coverage/
+*.lcov
+
+# Temporary files
+*.tmp
+*.temp
+*.swp
+
+# IDE and editor settings
+.idea/
+.vscode/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+
+# OS-specific files
 .DS_Store
-*.pem
+Thumbs.db
+
+# Yarn (if present in some parts of the repo)
+.yarn/
+.yarnrc.yml
